# finance-app

./: .gitignore  Cargo.toml  README.md
backend/: .env  Cargo.toml  tester.html
backend/src/: lib.rs
backend/src/tcp/: checksum.rs  connection.rs  headers.rs  mod.rs  socket.rs  tests.rs
backend/src/websockets/: connection.rs  error.rs  frame.rs  mod.rs  request.rs
backend/src/workers/: mod.rs  pool.rs  worker.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
src/: main.rs
