[package]
name = "finance-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14"
sha-1 = "0.10"
base64 = "0.21"


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "websocket"
path = "src/bin/websockets.rs"